Project

General

Profile

Actions

Bug #53728

closed

rgwlc: warn at level 0 if lifecycle processing for a valid bucket marker fails due to missing RGW_ATTR_LC

Added by Matt Benjamin over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This would most likely indicate a problem, either with clearing lifecycle or worse, some form of damage to bucket_info.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #54092: pacific: rgwlc: warn at level 0 if lifecycle processing for a valid bucket marker fails due to missing RGW_ATTR_LCResolvedCory SnyderActions
Copied to rgw - Backport #54093: quincy: rgwlc: warn at level 0 if lifecycle processing for a valid bucket marker fails due to missing RGW_ATTR_LCResolvedCory SnyderActions
Actions #1

Updated by Matt Benjamin over 2 years ago

  • Pull request ID set to 44408
Actions #2

Updated by Casey Bodley over 2 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Casey Bodley about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from pacific to pacific quincy
Actions #4

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54092: pacific: rgwlc: warn at level 0 if lifecycle processing for a valid bucket marker fails due to missing RGW_ATTR_LC added
Actions #5

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54093: quincy: rgwlc: warn at level 0 if lifecycle processing for a valid bucket marker fails due to missing RGW_ATTR_LC added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (backport_processed)
Actions

Also available in: Atom PDF